--- a/tickets/package.json
+++ b/tickets/package.json
@@ -2,9 +2,10 @@
   "name": "tickets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "jest --watchAll --no-cache",
     "test:ci": "jest"
   },
