--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,16 @@
-FROM node:alpine
+FROM node:18                
 
-WORKDIR /app
-COPY package.json .
-RUN npm install --omit=dev
-COPY . .
+WORKDIR /app  
 
-CMD ["npm", "start"]
+COPY client/tsconfig.json ./
+COPY client/package.json ./       
+
+RUN npm install            
+
+COPY client/ ./
+
+RUN npm run build            
+
+EXPOSE 3040                
+
+CMD ["npm", "start"]       
