--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts",
+    "start": "node index.js",         
+    "build": "echo 'Nothing to build'" ,
     "test": "jest --watchAll --no-cache",
     "test:ci": "jest"
   },
