--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node index.js",         
+    "build": "echo 'Nothing to build'" ,
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
