--- a/tickets/package.json
+++ b/tickets/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc",
+    "start": "node index.js",         
+    "build": "echo 'Nothing to build'" ,
     "test": "jest --watchAll --no-cache",
     "test:ci": "jest"
   },
