--- a/expiration/package.json
+++ b/expiration/package.json
@@ -6,7 +6,7 @@
   "scripts": {
        "start": "node index.js",         
     "build": "echo 'Nothing to build'" ,
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --watchAll --no-cache","sonar": "sonar-scanner -Dsonar.projectKey=payments -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN"
   },
   "jest": {
     "preset": "ts-jest",
