--- a/payments/package.json
+++ b/payments/package.json
@@ -7,7 +7,9 @@
        "start": "node index.js",         
     "build": "echo 'Nothing to build'" ,
     "test": "jest --watchAll --no-cache",
-    "test:ci": "jest --forceExit"
+    "test:ci": "jest --forceExit",
+    "sonar": "sonar-scanner -Dsonar.projectKey=payments -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN"
+    
   },
   "jest": {
     "preset": "ts-jest",
