--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "start": "node index.js",         
     "build": "echo 'Nothing to build'" ,
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sonar": "sonar-scanner -Dsonar.projectKey=payments -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN"
   },
   "eslintConfig": {
     "extends": [
