--- a/orders/package.json
+++ b/orders/package.json
@@ -7,7 +7,7 @@
       "start": "node index.js",         
     "build": "echo 'Nothing to build'" ,
     "test": "jest --watchAll --no-cache",
-    "test:ci": "jest"
+    "test:ci": "jest","sonar": "sonar-scanner -Dsonar.projectKey=payments -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN"
   },
   "jest": {
     "preset": "ts-jest",
