--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,16 +1,8 @@
-FROM node:18                
+FROM node:alpine
 
-WORKDIR /app  
-COPY tsconfig.json ./
+WORKDIR /app
+COPY package.json .
+RUN npm install --omit=dev
+COPY . .
 
-COPY package.json ./       
-
-RUN npm install            
-
-COPY . ./
-
-
-RUN npm run build            
-               
-
-CMD ["npm", "start"]       
+CMD ["npm", "start"]
