--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,11 @@
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "node index.js",         
-    "build": "echo 'Nothing to build'" ,
+ "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sonar": "sonar-scanner -Dsonar.projectKey=payments -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
