--- a/payments/package.json
+++ b/payments/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-       "start": "node index.js",         
-    "build": "echo 'Nothing to build'" ,
+    "start": "ts-node-dev --poll src/index.ts",
     "test": "jest --watchAll --no-cache",
-    "test:ci": "jest --forceExit",
-    "sonar": "sonar-scanner -Dsonar.projectKey=payments -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN"
-    
+    "test:ci": "jest --forceExit"
   },
   "jest": {
     "preset": "ts-jest",
